RESOLVED FIXED194105
Page zoom level is lost after a process swap or a crash
https://bugs.webkit.org/show_bug.cgi?id=194105
Summary Page zoom level is lost after a process swap or a crash
Chris Dumez
Reported 2019-01-31 12:39:52 PST
Page zoom level is lost after a process swap or a crash.
Attachments
Patch (9.96 KB, patch)
2019-01-31 12:47 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-01-31 12:40:09 PST
Chris Dumez
Comment 2 2019-01-31 12:47:20 PST
EWS Watchlist
Comment 3 2019-01-31 12:49:01 PST
Attachment 360757 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2503: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2508: One space before end of line comments [whitespace/comments] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2515: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2537: Extra space between ^ and block definition. [whitespace/brackets] [4] Total errors found: 4 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4 2019-01-31 14:14:25 PST
Comment on attachment 360757 [details] Patch Clearing flags on attachment: 360757 Committed r240818: <https://trac.webkit.org/changeset/240818>
Chris Dumez
Comment 5 2019-01-31 14:14:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.